[refactor] refactor how commands are created and dealt with

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ DISCORD_BOT_OWNER_ID=your_discord_id
 
 LAVALINK_SERVER_PASSWORD=lavalink_password
 LAVALINK_SERVER_PORT=2333
+
+ENABLE_LAVALINK=true
