[feat] add a basic api to enable persistent storage and mutability

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ LAVALINK_SERVER_PASSWORD=lavalink_password
 LAVALINK_SERVER_PORT=2333
 
 ENABLE_LAVALINK=true
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password
+POSTGRES_DB=discordbot
